--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
     "angularfire2": "^5.2.1",
+    "express": "^4.17.1",
     "firebase": "^6.2.4",
+    "jade": "^1.11.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
+    "wpcom-oauth": "^0.3.4",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
