--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "express": "^4.17.1",
     "firebase": "^6.6.2",
     "jade": "^1.11.0",
+    "ngx-cookie-service": "^2.3.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "wpcom-oauth": "^0.3.4",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.800.6",
+    "@angular-devkit/build-angular": "^0.803.24",
     "@angular/cli": "^8.0.6",
     "@angular/compiler-cli": "^8.0.3",
     "@angular/language-service": "^8.0.3",
